--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "mongoose": "^6.3.4",
     "mysql": "^2.18.1",
     "pg": "^8.7.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.0.0",
+    "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
     "web-vitals": "^2.1.4"
