--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "mongoose": "^6.3.4",
     "mysql": "^2.18.1",
     "pg": "^8.7.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "next build"
+    "dev": "next dev --force",
+    "build": "next build --force",
+    "start": "next start --force",
+    "lint": "next lint --force",
+    "postinstall": "next build --force"
   },
   "eslintConfig": {
     "extends": [
